# resolve

./: LICENSE  README.md  now.json  pyproject.toml  requirements.txt
api/: redirect.py  resolve.py
